Fix spacing issues with skills

--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -44,9 +44,10 @@
 }
 
 .skills-section {
-    column-count: 8;
+    column-width: 32px;
+    column-count: auto;
     min-height: 32px;
-    margin-bottom: 10px;
+    margin-bottom: 2vh;
 }
 
 .proj-img {
